@@ -3,7 +3,7 @@ Version: 0.0-69
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
-Depends: methods, gWidgets(>= 0.0.41)
+Depends: methods, gWidgets(>= 0.0.43)
 Imports: RGtk2(>= 2.12.8)
 Suggests: cairoDevice (>= 2.3.0)  
 Extends: RGtk2Extras
