@@ -523,12 +523,14 @@ setReplaceMethod(".tooltip",
 setReplaceMethod("tooltip",signature(obj="RGtkObject"),
           function(obj, ..., value) {
             ## set the tip.
-            tooltipGroup <- try(gtkTooltips(), silent = TRUE)
-            if(inherits(tooltipGroup, "try-error"))
-              return(obj)
-            ## some widgets don't allow a tooltip (glabel, ...)
-            ## right check is widget.flags()&gtk.NO_WINDOW
-            try(tooltipGroup$setTip(obj, tip.text = value), silent=TRUE)
+            obj$setTooltipText(paste(value, collapse="\n"))
+            ## deprecated
+            ## tooltipGroup <- try(gtkTooltips(), silent = TRUE)
+            ## if(inherits(tooltipGroup, "try-error"))
+            ##   return(obj)
+            ## ## some widgets don't allow a tooltip (glabel, ...)
+            ## ## right check is widget.flags()&gtk.NO_WINDOW
+            ## try(tooltipGroup$setTip(obj, tip.text = value), silent=TRUE)
             return(obj)
           })
 
