@@ -1,3 +1,14 @@
+2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/ggrid.R: added columnWidths option to size<- method. Pass in
+	size value as list with this component
+
+2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gaction.R: put in key.accel bit. Needs parent to be passed in.
+
+	* R/aaaGenerics.R: update tooltip<- to newer GTK style
+
 2010-12-14  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gdroplist.R: fix minimum column width under windows (15 was
@@ -34,7 +45,7 @@
 
 2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
-	* R/gslider.R (gsliderindex): changed so that can use vector of
+	* R/gslider.R (gsliderindex): changed so that one can use vector of
 	orderable values. Pass to from argument initially.
 	
 
